<resources>
    <string name="app_name">AfriHUB</string>

    <string name="username_hint">Student ID</string>
    <string name="password_hint">Password</string>
    <string name="signin_button_text">Sign In</string>
    <string name="signup_hint">Not yet a user? Signup!</string>

    <string name="fullname_hint">Fullname</string>
    <string name="lastname_hint">Lastname</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="signup_button_text">Sign Up</string>

    <string name="greeting_text">Hello!</string>
    <string name="instruction">We would like some information about you</string>

    <string name="new_courses">New courses available</string>
    <string name="course_greeting_text">Almost done</string>
    <string name="course_instruction">Select your courses</string>

    <string name="set_alarm_notification">Set notification for this course</string>
    <string name="add_course_text">add course</string>
    <string name="edit_profile_text">edit profile</string>
    <string name="settings">Settings</string>

    <string name="user_id_key">user_id</string>
    <string name="logged_status_key">logged_in_id</string>

    <string name="authenticating_string">Authenticating</string>
    <string name="please_wait">Please wait</string>
    <string name="user_not_found">Sorry but we can\'t seem to find this user</string>
    <string name="password_incorrect">Please check your password</string>

    <!--
        Tab title for timetable and profile tags
    -->
    <string name="timetable_tag">Timetable</string>
    <string name="profile_tag">Profile</string>

    <string name="profile_image_uri">Profile Image</string>

    <string name="no_courses">No courses added</string>
    <string name="title_activity_course_update">CourseUpdateActivity</string>
    <string name="update">Update</string>


    <string name="profile_update">Update your profile</string>
    <string name="course_update">Add course</string>
    <string name="add_courses_text">Add courses</string>
    <string name="create_profile">Create profile</string>
    <string name="login_in">Login</string>

    <string name="course_brief">
        Learn HTML5 for building web apps. Turn your app ideas into reality
    </string>

    <string name="course_description">
        Learn HTML5 for building web apps. This course covers JavaScript
        and the new HTML5 APIs.
    </string>

    <string name="course_outline">
        HTML5: What is ?\nBuilding a static site\nSingle page apps\nJavaScript Objects\nProject Phase 1\n
    </string>

    <string name="instructors">
        Michael Okoye, Catherine Kuan, Reto Meyer
    </string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Keep track of all your course schedules,\nNever miss a class, set reminders \nand get notified when due.</string>
    <string name="empty" />
    <string name="course_tag">Courses</string>

</resources>
