<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fontPath="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/activity_background"
    tools:context="com.mikeoye.afrihub.SignInActivity">

    <!-- Hero image -->
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/hero2"
        android:scaleType="centerCrop"/>

    <ScrollView android:id="@+id/scroller"
        android:isScrollContainer="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/sign_in_activity_margin"
            android:paddingRight="@dimen/sign_in_activity_margin"
            android:layout_marginTop="@dimen/login_activity_margin_60">

            <!-- Company logo goes here -->

            <TextView
                android:text="@string/login_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textColor="@color/colorPrimary"
                style="@style/WelcomeScreenTextThemeMedium"
                android:layout_marginStart="@dimen/activity_horizontal_margin" />

            <GridLayout
                android:layout_marginTop="48dp"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/ic_perm_identity_black_24dp"/>

                <EditText
                    android:layout_row="0"
                    android:layout_column="1"
                    android:id="@+id/usernameEditText"
                    android:inputType="text"
                    android:hint="@string/username_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputFieldsTheme"/>

                <View
                    android:background="#fff"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp" />

                <ImageView
                    android:layout_marginRight="15dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/ic_vpn_key_black_24dp"/>

                <EditText
                    android:layout_row="2"
                    android:layout_column="1"
                    android:id="@+id/passwordEditText"
                    android:hint="@string/password_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/InputFieldsTheme"/>

                <View
                    android:background="#fff"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp" />

            </GridLayout>


            <TextView android:id="@+id/error_display"
                android:textColor="@color/error_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>

    </ScrollView>

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_in_button"
                android:text="@string/signin_button_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/CustomButton"
                android:background="@drawable/buttons_shape" />

        </LinearLayout>

    <ProgressBar android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="85dp"
        android:layout_gravity="center"/>

    <include layout="@layout/transparent_tool_bar"/>

</FrameLayout>
